events content updates

--- a/directories/events-directory/events.html
+++ b/directories/events-directory/events.html
@@ -26,6 +26,7 @@
             <ul class='chips'>
               <li>Technology</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202405-gitex-africa-2024">  
           <div class="panel-info">
@@ -75,6 +76,7 @@
             <ul class='chips'>
               <li>Technology</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202406-dach-netzwerktreffen-at-viennaup">  
           <div class="panel-info">
@@ -182,6 +184,7 @@
             <ul class='chips'>
               <li>Technology</li><li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202406-advanced-ngsi-ld-registrations---using-ngsi-ld-in-a--system-of-systems--approach">  
           <div class="panel-info">
@@ -234,6 +237,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202406-fiware-data-spaces---a-practical-introduction-into-roles-and-components">  
           <div class="panel-info">
@@ -286,6 +290,7 @@
             <ul class='chips'>
               <li>University</li><li>Technology</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202406-leveraging-ngsi-in-university-courses">  
           <div class="panel-info">
@@ -357,6 +362,7 @@
             <ul class='chips'>
               <li>Smart Cities</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202406-cities-climate-action-summit-2024">  
           <div class="panel-info">
@@ -410,6 +416,7 @@
             <ul class='chips'>
               <li>Technology</li><li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202407-creating-combined-ngsi-v2-ngsi-ld-data-spaces">  
           <div class="panel-info">
@@ -462,6 +469,7 @@
             <ul class='chips'>
               <li>Technology</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202407-advanced-dashboards-with-wirecloud-2-0">  
           <div class="panel-info">
@@ -520,6 +528,7 @@
             <ul class='chips'>
               <li>Technology</li><li>AI</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202409-enhancing-tourism-with-smart-technologies--integrating-fiware-and-large-language-models">  
           <div class="panel-info">
@@ -581,6 +590,7 @@
             <ul class='chips'>
               <li>Global Summit</li><li>Technology</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202409-fiware-tech-training-naples">  
           <div class="panel-info">
@@ -624,6 +634,7 @@
             <ul class='chips'>
               <li>Global Summit</li><li>Technology</li><li>Smart Cities</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202409-fiware-global-summit-2024">  
           <div class="panel-info">
@@ -667,6 +678,7 @@
             <ul class='chips'>
               <li>Global Summit</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202409-fi-dinner-naples">  
           <div class="panel-info">
@@ -720,6 +732,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202410-fiware-data-space-technologies-webinar--1--fiware-vision-on-data-spaces">  
           <div class="panel-info">
@@ -777,6 +790,7 @@
             <ul class='chips'>
               <li>Smart Cities</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202411-smart-city-expo-world-congress-2024">  
           <div class="panel-info">
@@ -831,6 +845,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--2--decentralized-iam-based-on-verifiable-credentials-and-odrl">  
           <div class="panel-info">
@@ -883,6 +898,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--3--contract-negotiation-in-data-spaces">  
           <div class="panel-info">
@@ -935,6 +951,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--4--deploying-a-fiware-data-space-connector">  
           <div class="panel-info">
@@ -987,6 +1004,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202411-transforming---exploiting-high-value-datasets--synergies-in-eu-open-data-projects">  
           <div class="panel-info">
@@ -1029,6 +1047,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--5--reference-use-case">  
           <div class="panel-info">
@@ -1081,6 +1100,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--6--ongoing-and-future-work">  
           <div class="panel-info">
@@ -1158,6 +1178,7 @@
             <ul class='chips'>
               <li>Data Spaces</li>
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id=202503-data-spaces-symposium-2024">  
           <div class="panel-info">
