events content updates

--- a/directories/events-directory/index.html
+++ b/directories/events-directory/index.html
@@ -1006,7 +1006,7 @@ z-index: 99999;
 <div class="title-filter">
 	<div class="showFilters">
 	    <div id="mobileToggleFilters">
-	        <span id="ico-filtersbar" class="material-symbols-outlined">filter_alt</span>
+	        <span id="ico-filtersbar" class="material-symbols-outlined">tune</span>
 	        <span id="filter-button-text" class="activeButton">Show Filters</span>
 	    </div>
 	</div>
