--- a/directories/people/team/filters.html
+++ b/directories/people/team/filters.html
@@ -46,51 +46,14 @@
 <div class='dropdown-container'>
 
 
-        <div class='filter-element'>
-            <label for='filterRole' class='dropdown-label'>Role</label>
-            <select name='' id='filterRole' class='dropdown-last'>
-                <option value='*'>All Roles</option>
-                        <option value='accounting-manager'>Accounting Manager</option>
-                        <option value='advisor'>Advisor</option>
-                        <option value='ai-expert'>AI Expert</option>
-                        <option value='architect'>Architect</option>
-                        <option value='brand-designer'>Brand Designer</option>
-                        <option value='business-development-manager-dach'>Business Development Manager DACH</option>
-                        <option value='ceo'>CEO</option>
-                        <option value='cloud-expert'>Cloud Expert</option>
-                        <option value='cmo'>CMO</option>
-                        <option value='community-manager'>Community Manager</option>
-                        <option value='coo'>COO</option>
-                        <option value='data-modeling-expert'>Data Modeling Expert</option>
-                        <option value='demonstrator-manager'>Demonstrator Manager</option>
-                        <option value='designer'>Designer</option>
-                        <option value='evangelist'>Evangelist</option>
-                        <option value='executive-assistant'>Executive Assistant</option>
-                        <option value='intern-artificial-intelligence'>Intern Artificial Intelligence</option>
-                        <option value='junior-project-manager'>Junior Project Manager</option>
-                        <option value='leader-of-strategic-programs'>Leader of Strategic Programs</option>
-                        <option value='marketing-manager'>Marketing Manager</option>
-                        <option value='marketing-operations-manager'>Marketing Operations Manager</option>
-                        <option value='marketplace-manager'>Marketplace Manager</option>
-                        <option value='office'>Office</option>
-                        <option value='operations'>Operations</option>
-                        <option value='platform-expert'>Platform Expert</option>
-                        <option value='program-manager'>Program Manager</option>
-                        <option value='public-relations-manager'>Public Relations Manager</option>
-                        <option value='solution-architect'>Solution Architect</option>
-                        <option value='technical-expert'>Technical Expert</option>
-                        <option value='technical-lead'>Technical Lead</option>
-                        <option value='vice-president-of-strategic-marketing-initiatives'>Vice President of Strategic Marketing Initiatives</option>
-            </select>
-        </div>
 
         <div class='filter-element'>
             <label for='filterDepartment' class='dropdown-label'>Department</label>
             <select name='' id='filterDepartment' class='dropdown-last'>
                 <option value='*'>All Departments</option>
-                        <option value='administrative-team'>Administrative Team</option>
-                        <option value='business-development-team'>Business Development Team</option>
-                        <option value='marketing-team'>Marketing Team</option>
+                        <option value='admin-team'>Admin Team</option>
+                        <option value='comms-team'>Comms Team</option>
+                        <option value='community-dev-team'>Community Dev Team</option>
                         <option value='operations-team'>Operations Team</option>
                         <option value='tech-team'>Tech Team</option>
             </select>
