Move style definition to template

--- a/directories/events-directory/event-details/index.html
+++ b/directories/events-directory/event-details/index.html
@@ -998,6 +998,7 @@ z-index: 99999;
         scr.src = "./pageData.js" + "?ts=" + Math.round(new Date().getTime()/3600000);
         document.getElementsByTagName("head")[0].appendChild(scr);
     }
+    window.mapStyle = './style.json';
 </script></div>
 			</div>
 			</div>
