--- a/directories/webinars/sitemap.html
+++ b/directories/webinars/sitemap.html
@@ -62,6 +62,7 @@ li {
 </head>
 <body>
 	<ul>
+		<li><a href="https://www.fiware.org/webinars/fiware-data-space-technologies---reference-use-case.html">FIWARE Data Space Technologies - Reference Use Case</a></li>
 		<li><a href="https://www.fiware.org/webinars/fiware-data-space-technologies---ongoing-and-future-work.html">FIWARE Data Space Technologies - Ongoing and Future Work</a></li>
 		<li><a href="https://www.fiware.org/webinars/deploying-a-fiware-data-space-connector.html">Deploying a FIWARE Data Space Connector</a></li>
 		<li><a href="https://www.fiware.org/webinars/contract-negotiation-in-data-spaces.html">Contract Negotiation in Data Spaces</a></li>
