team content updates

--- a/directories/people/team/filters.html
+++ b/directories/people/team/filters.html
@@ -47,6 +47,14 @@
 
 
 
+        <div class='filter-element'>
+            <label for='filterDepartment' class='dropdown-label'>Department</label>
+            <select name='' id='filterDepartment' class='dropdown-last'>
+                <option value='*'>All Departments</option>
+                        <option value='operations'>Operations</option>
+                        <option value='technical'>Technical</option>
+            </select>
+        </div>
 
 
 </div>
