Add AAS IoT Agent

--- a/directories/enablers/filters.html
+++ b/directories/enablers/filters.html
@@ -68,7 +68,9 @@
         <label for="filterTechnology" class="dropdown-label">Technology</label>
         <select name='' id='filterTechnology'>
             <option value='*'>All Technologies</option>
+                    <option value='aas'>AAS</option>
                     <option value='ampq'>AMPQ</option>
+                    <option value='angular'>Angular</option>
                     <option value='apache-flink'>Apache Flink</option>
                     <option value='apache-spark'>Apache Spark</option>
                     <option value='arcgis'>ArcGIS</option>
