--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -14,7 +14,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='0'><span class='icon bio'></span></a>
@@ -43,7 +43,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
@@ -69,7 +69,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
@@ -95,7 +95,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
@@ -124,7 +124,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
@@ -182,7 +182,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
@@ -208,7 +208,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Admin Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='7'><span class='icon bio'></span></a>
@@ -231,7 +231,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='8'><span class='icon bio'></span></a>
@@ -257,7 +257,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='9'><span class='icon bio'></span></a>
@@ -286,7 +286,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='10'><span class='icon bio'></span></a>
@@ -312,7 +312,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='11'><span class='icon bio'></span></a>
@@ -338,7 +338,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='12'><span class='icon bio'></span></a>
@@ -364,7 +364,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='13'><span class='icon bio'></span></a>
@@ -390,7 +390,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='14'><span class='icon bio'></span></a>
@@ -416,7 +416,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='15'><span class='icon bio'></span></a>
@@ -442,7 +442,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='16'><span class='icon bio'></span></a>
@@ -468,7 +468,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='17'><span class='icon bio'></span></a>
@@ -497,7 +497,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='18'><span class='icon bio'></span></a>
@@ -523,7 +523,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='19'><span class='icon bio'></span></a>
@@ -552,7 +552,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='20'><span class='icon bio'></span></a>
@@ -578,7 +578,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='21'><span class='icon bio'></span></a>
@@ -604,7 +604,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='22'><span class='icon bio'></span></a>
@@ -633,7 +633,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='23'><span class='icon bio'></span></a>
@@ -659,7 +659,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='24'><span class='icon bio'></span></a>
@@ -682,7 +682,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='25'><span class='icon bio'></span></a>
@@ -708,7 +708,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='26'><span class='icon bio'></span></a>
@@ -734,7 +734,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='27'><span class='icon bio'></span></a>
@@ -757,7 +757,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='28'><span class='icon bio'></span></a>
@@ -783,7 +783,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='29'><span class='icon bio'></span></a>
@@ -809,7 +809,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations</div>
+                    <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='30'><span class='icon bio'></span></a>
@@ -835,7 +835,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Technical</div>
+                    <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='31'><span class='icon bio'></span></a>
