Updating people data.

--- a/directories/people/boo/filters.html
+++ b/directories/people/boo/filters.html
@@ -1,10 +1,10 @@
-<div class="filter-element">
-    <div class="products-record">
-        <div class="products-label">
-            <span id="ico-products" class="material-icons-outlined">groups</span>
+<div class='filter-element'>
+    <div class='products-record'>
+        <div class='products-label'>
+            <span id='ico-products' class='material-symbols-outlined'>groups</span>
             <span>Board of Officers</span>
         </div>
-        <span id="filteredCompanies"></span>
+        <span id='filteredCompanies'></span>
     </div>
 </div>
 
@@ -26,96 +26,76 @@
         <div class="sort-buttons">
             <div class="filter-element">
                 <button id="orderByName">
-                    <span id="ico-sortby-alpha" class="material-icons-outlined">sort_by_alpha</span>Name
+                    <span id="ico-sortby-alpha" class="material-symbols-outlined">sort_by_alpha</span>Name
                 </button>
             </div>
             <div class="filter-element">
                 <button id="orderByCountry">
-                    <span id="ico-sortby-year" class="material-icons-outlined">flag</span>Country
+                    <span id="ico-sortby-year" class="material-symbols-outlined">flag</span>Country
                 </button>
             </div>
             <div class="filter-element">
                 <button id="orderByDomain">
-                    <span id="ico-sortby-year" class="material-icons-outlined">grid_view</span>Domain
+                    <span id="ico-sortby-year" class="material-symbols-outlined">grid_view</span>Domain
                 </button>
             </div>
         </div>
     </div>
 </div-->
 
-<div class="dropdown-container">
-    <div class="filter-element">
-        <label for="filterCompany" class="dropdown-label">Organisation</label>
-        <select name="" id="filterCompany" class="dropdown-last">
-            <option value="*">All Organisations</option>
-            <option value="atos">Atos</option>
-            <option value="aws">AWS</option>
-            <option value="city-of-herne">City of Herne</option>
-            <option value="easy-global-market">Easy Global Market</option>
-            <option value="engineering">Engineering</option>
-            <option value="eprosima">eProsima</option>
-            <option value="eridanis">Eridanis</option>
-            <option value="ficodes">Ficodes</option>
-            <option value="fiware-foundation">FIWARE Foundation</option>
-            <option value="martel-innovation">Martel Innovation</option>
-            <option value="nec-lab-europe">NEC Lab Europe</option>
-            <option value="orange">Orange</option>
-            <option value="red-hat">Red Hat</option>
-            <option value="secmotic">Secmotic</option>
-            <option value="telefonica">Telefonica</option>
-            <option value="universidad-politécnica-de-madrid">Universidad Politécnica de Madrid</option>
-        </select>
-    </div>
+<div class='dropdown-container'>
 
-    <div class="filter-element">
-        <label for="filterRole" class="dropdown-label">Role</label>
-        <select name="" id="filterRole" class="dropdown-last">
-            <option value="*">All Roles</option>
-            <option value="architect">Architect</option>
-            <option value="assistant-professor">Assistant Professor</option>
-            <option value="associate-professor">Associate Professor</option>
-            <option value="business-developer">Business Developer</option>
-            <option value="ceo">CEO</option>
-            <option value="cloud-expert">Cloud Expert</option>
-            <option value="co-founder">Co-Founder</option>
-            <option value="coo">COO</option>
-            <option value="cto">CTO</option>
-            <option value="data-modeling-expert">Data Modeling Expert</option>
-            <option value="director">Director</option>
-            <option value="evangelist">Evangelist</option>
-            <option value="innovation-manager">Innovation Manager</option>
-            <option value="iot-specialist">IoT Specialist</option>
-            <option value="platform-expert">Platform Expert</option>
-            <option value="researcher">Researcher</option>
-            <option value="smart-cities-specialist">Smart Cities Specialist</option>
-            <option value="software-engineering-manager">Software Engineering Manager</option>
-            <option value="solution-architect">Solution Architect</option>
-            <option value="technical-expert">Technical Expert</option>
-            <option value="technical-lead">Technical Lead</option>
-        </select>
-    </div>
+        <div class='filter-element'>
+            <label for='filterCompany' class='dropdown-label'>Organisation</label>
+            <select name='' id='filterCompany' class='dropdown-last'>
+                <option value='*'>All Organisations</option>
+                        <option value='addix'>ADDIX</option>
+                        <option value='atos'>Atos</option>
+                        <option value='ficodes'>Ficodes</option>
+                        <option value='hopu---libelium'>Hopu – Libelium</option>
+                        <option value='madinah-region-development-authority'>Madinah Region Development Authority</option>
+                        <option value='meditech'>MedITech</option>
+                        <option value='nec'>NEC</option>
+                        <option value='secmotic'>Secmotic</option>
+            </select>
+        </div>
 
-    <div class="filter-element">
-        <label for="filterDomain" class="dropdown-label">Domain</label>
-        <select name="" id="filterDomain" class="dropdown-last">
-            <option value="*">All Domains</option>
-            <option value="associates">Associates</option>
-            <option value="gold">Gold</option>
-            <option value="gold-seu">Gold SEU</option>
-            <option value="platinum">Platinum</option>
-        </select>
-    </div>
+        <div class='filter-element'>
+            <label for='filterRole' class='dropdown-label'>Role</label>
+            <select name='' id='filterRole' class='dropdown-last'>
+                <option value='*'>All Roles</option>
+                        <option value='ceo'>CEO</option>
+                        <option value='co-founder'>Co-Founder</option>
+                        <option value='cso'>CSO</option>
+                        <option value='cto'>CTO</option>
+                        <option value='director'>Director</option>
+                        <option value='fellow'>Fellow</option>
+                        <option value='general-manager'>General Manager</option>
+                        <option value='managing-director'>Managing Director</option>
+                        <option value='vp'>VP</option>
+            </select>
+        </div>
 
-    <div class="filter-element">
-        <label for="filterCountry" class="dropdown-label">Countries</label>
-        <select name="" id="filterCountry" class="dropdown-last">
-            <option value="*">All Locations</option>
-            <option value="france">France</option>
-            <option value="germany">Germany</option>
-            <option value="italy">Italy</option>
-            <option value="spain">Spain</option>
-            <option value="sweden">Sweden</option>
-            <option value="switzerland">Switzerland</option>
-        </select>
-    </div>
+
+        <div class='filter-element'>
+            <label for='filterDomain' class='dropdown-label'>Domain</label>
+            <select name='' id='filterDomain' class='dropdown-last'>
+                <option value='*'>All Domains</option>
+                        <option value='gold'>Gold</option>
+                        <option value='platinum'>Platinum</option>
+            </select>
+        </div>
+
+        <div class='filter-element'>
+            <label for='filterCountry' class='dropdown-label'>Countries</label>
+            <select name='' id='filterCountry' class='dropdown-last'>
+                <option value='*'>All Locations</option>
+                    <option value='france'>France</option>
+                    <option value='germany'>Germany</option>
+                    <option value='italy'>Italy</option>
+                    <option value='japan'>Japan</option>
+                    <option value='saudi-arabia'>Saudi Arabia</option>
+                    <option value='spain'>Spain</option>
+            </select>
+        </div>
 </div>
