--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -76,6 +76,7 @@
                 <option value='smart-cities'>Smart Cities</option>
                 <option value='ai'>AI</option>
                 <option value='global-summit'>Global Summit</option>
+                <option value='smart-water'>Smart Water</option>
         </select>
     </div>
 </div>
