team content updates

--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -153,7 +153,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Admin Team</div>
+                    <div class='department'>BoO</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='5'><span class='icon bio'></span></a>
@@ -633,7 +633,7 @@
                 <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                     <h5 class='company-link'>FIWARE Foundation</h5>
                 </a>
-                    <div class='department'>Operations Team</div>
+                    <div class='department'>BoO</div>
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='23'><span class='icon bio'></span></a>
