team content updates

--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -212,6 +212,9 @@
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='7'><span class='icon bio'></span></a>
+                    <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/viktoryia-danilenko-b664a62a8/' rel='noopener'><span
+                            class='icon linkedin'
+                        ></span></a>
             </div>
         </div>
     </div>
@@ -663,6 +666,9 @@
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='24'><span class='icon bio'></span></a>
+                    <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/eprieto/' rel='noopener'><span
+                            class='icon linkedin'
+                        ></span></a>
             </div>
         </div>
     </div>
@@ -738,6 +744,9 @@
             </div>
             <div class='icons'>
                     <a class='cat-bio' data-modal='27'><span class='icon bio'></span></a>
+                    <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/cecilia-setter-72411a1b3/' rel='noopener'><span
+                            class='icon linkedin'
+                        ></span></a>
             </div>
         </div>
     </div>
