event added water knowledge europe

--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -77,6 +77,7 @@
                 <option value='ai'>AI</option>
                 <option value='global-summit'>Global Summit</option>
                 <option value='smart-water'>Smart Water</option>
+                <option value='data-sharing'>Data Sharing</option>
         </select>
     </div>
 </div>
